--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,50 +7,51 @@
 <link rel="stylesheet" href="/static/styles.css">
 </head>
 <body>
+
 <header>
-    <h1>SmartCargo AIPA</h1>
-    <button id="translateBtn">Español / English</button>
+<h1>SmartCargo AIPA</h1>
+<button id="langToggle">Español / English</button>
 </header>
 
-<section>
-    <h2>Cargo & Document Management</h2>
+<section id="cargoForm">
+<h2>Cargo & Document Management</h2>
+<form id="createCargoForm">
+<input type="text" name="mawb" placeholder="MAWB" required>
+<input type="text" name="hawb" placeholder="HAWB">
+<input type="text" name="origin" placeholder="Origin" required>
+<input type="text" name="destination" placeholder="Destination" required>
+<input type="text" name="cargo_type" placeholder="Cargo Type" required>
+<input type="date" name="flight_date" required>
+<button type="submit">Create Cargo</button>
+</form>
+</section>
 
-    <form id="cargoForm">
-        <input type="text" name="mawb" placeholder="MAWB" required>
-        <input type="text" name="hawb" placeholder="HAWB">
-        <input type="text" name="origin" placeholder="Origin" required>
-        <input type="text" name="destination" placeholder="Destination" required>
-        <input type="text" name="cargo_type" placeholder="Cargo Type" required>
-        <input type="date" name="flight_date" required>
-        <button type="submit">Create Cargo</button>
-    </form>
+<section id="cargoTableSection">
+<h2>Cargo List</h2>
+<table id="cargoTable">
+<thead>
+<tr>
+<th>ID Cargo</th>
+<th>MAWB</th>
+<th>HAWB</th>
+<th>Origin</th>
+<th>Destination</th>
+<th>Type</th>
+<th>Flight Date</th>
+<th>Document</th>
+<th>Version</th>
+<th>Status</th>
+<th>Responsible</th>
+<th>Upload Date</th>
+<th>Audit Notes</th>
+<th>Actions</th>
+</tr>
+</thead>
+<tbody></tbody>
+</table>
 
-    <table id="cargoTable">
-        <thead>
-            <tr>
-                <th>ID Cargo</th>
-                <th>MAWB</th>
-                <th>HAWB</th>
-                <th>Origin</th>
-                <th>Destination</th>
-                <th>Type</th>
-                <th>Flight Date</th>
-                <th>Documents</th>
-                <th>Version</th>
-                <th>Status</th>
-                <th>Responsible</th>
-                <th>Upload Date</th>
-                <th>Audit Notes</th>
-            </tr>
-        </thead>
-        <tbody>
-        </tbody>
-    </table>
-
-    <div class="buttons">
-        <button id="printBtn">Print / PDF</button>
-        <button id="whatsappBtn">Send WhatsApp</button>
-    </div>
+<button id="printBtn">Print / PDF</button>
+<button id="whatsappBtn">Send WhatsApp</button>
 </section>
 
 <script src="/static/scripts.js"></script>
