--- a/frontend/index.html
+++ b/frontend/index.html
@@ -36,11 +36,15 @@
                 <th>Type</th>
                 <th>Flight Date</th>
                 <th>Documents</th>
+                <th>Version</th>
                 <th>Status</th>
+                <th>Responsible</th>
+                <th>Upload Date</th>
                 <th>Audit Notes</th>
             </tr>
         </thead>
-        <tbody></tbody>
+        <tbody>
+        </tbody>
     </table>
 
     <div class="buttons">
