--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,210 +1,242 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <title>SmartCargo AIPA</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Asesor SmartCargo-AIPA</title>
 
-    <!-- Estilos -->
-    <link rel="stylesheet" href="/static/styles.css">
+  <!-- Estilo profesional tipo Avianca / IATA -->
+  <style>
+    :root {
+      --green: #00b050;
+      --yellow: #ffc000;
+      --red: #c00000;
+      --dark: #0b1c2d;
+      --gray: #f2f4f7;
+      --blue: #003a8f;
+    }
 
-    <style>
-        body {
-            font-family: Arial, Helvetica, sans-serif;
-            background: #f4f6f8;
-            margin: 0;
-            padding: 0;
-        }
+    body {
+      margin: 0;
+      font-family: "Segoe UI", Arial, sans-serif;
+      background: var(--gray);
+      color: #1a1a1a;
+    }
 
-        header {
-            background: #002b45;
-            color: white;
-            padding: 15px 25px;
-        }
+    header {
+      background: var(--dark);
+      color: #fff;
+      padding: 18px 30px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
 
-        header h1 {
-            margin: 0;
-            font-size: 24px;
-        }
+    header h1 {
+      margin: 0;
+      font-size: 20px;
+      letter-spacing: 0.5px;
+    }
 
-        header h2 {
-            margin: 5px 0 0;
-            font-size: 14px;
-            font-weight: normal;
-            opacity: 0.9;
-        }
+    header span {
+      font-size: 13px;
+      opacity: 0.8;
+    }
 
-        .container {
-            padding: 20px;
-        }
+    .container {
+      padding: 25px 30px;
+    }
 
-        .toolbar {
-            display: flex;
-            gap: 10px;
-            flex-wrap: wrap;
-            margin-bottom: 15px;
-        }
+    /* DASHBOARD */
+    .dashboard {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+      gap: 20px;
+      margin-bottom: 30px;
+    }
 
-        .toolbar button, .toolbar select {
-            padding: 8px 12px;
-            border-radius: 4px;
-            border: 1px solid #ccc;
-            cursor: pointer;
-            background: white;
-        }
+    .card {
+      background: #fff;
+      border-radius: 14px;
+      padding: 20px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.08);
+    }
 
-        .toolbar button.primary {
-            background: #0066a1;
-            color: white;
-            border: none;
-        }
+    .card h3 {
+      margin: 0 0 10px 0;
+      font-size: 14px;
+      text-transform: uppercase;
+      color: #666;
+    }
 
-        .dashboard {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-            gap: 15px;
-            margin-bottom: 20px;
-        }
+    .card .value {
+      font-size: 34px;
+      font-weight: bold;
+      color: var(--blue);
+    }
 
-        .card {
-            background: white;
-            padding: 15px;
-            border-radius: 6px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-        }
+    /* SEMÁFORO */
+    .semaforo {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
 
-        .card h3 {
-            margin: 0 0 10px;
-            font-size: 14px;
-            color: #555;
-        }
+    .light {
+      width: 70px;
+      height: 70px;
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: #fff;
+      font-weight: bold;
+      font-size: 13px;
+      box-shadow: inset 0 0 10px rgba(0,0,0,0.3);
+    }
 
-        .card .value {
-            font-size: 22px;
-            font-weight: bold;
-        }
+    .green { background: var(--green); }
+    .yellow { background: var(--yellow); color: #000; }
+    .red { background: var(--red); }
 
-        .green { color: #1e8e3e; }
-        .red { color: #c5221f; }
-        .yellow { color: #e37400; }
+    /* TABLA */
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      background: #fff;
+      border-radius: 14px;
+      overflow: hidden;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.08);
+    }
 
-        table {
-            width: 100%;
-            border-collapse: collapse;
-            background: white;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-        }
+    thead {
+      background: var(--dark);
+      color: #fff;
+    }
 
-        thead {
-            background: #e9ecef;
-        }
+    th, td {
+      padding: 14px 12px;
+      text-align: left;
+      font-size: 14px;
+    }
 
-        th, td {
-            padding: 10px;
-            border-bottom: 1px solid #ddd;
-            font-size: 13px;
-            vertical-align: top;
-        }
+    th {
+      text-transform: uppercase;
+      font-size: 12px;
+      letter-spacing: 0.4px;
+    }
 
-        th {
-            text-align: left;
-        }
+    tr:nth-child(even) {
+      background: #f8f9fb;
+    }
 
-        tbody tr:hover {
-            background: #f1f7fb;
-        }
+    .status {
+      font-weight: bold;
+      padding: 6px 10px;
+      border-radius: 20px;
+      font-size: 12px;
+      display: inline-block;
+    }
 
-        footer {
-            margin-top: 20px;
-            font-size: 12px;
-            color: #666;
-        }
+    .ok { background: rgba(0,176,80,0.15); color: var(--green); }
+    .warn { background: rgba(255,192,0,0.2); color: #9c7b00; }
+    .fail { background: rgba(192,0,0,0.15); color: var(--red); }
 
-        .legal {
-            font-style: italic;
-            color: #888;
-        }
-    </style>
+    footer {
+      margin-top: 30px;
+      text-align: center;
+      font-size: 12px;
+      color: #777;
+    }
+  </style>
 </head>
-
 <body>
 
 <header>
-    <h1>SmartCargo AIPA</h1>
-    <h2>Cargo & Document Validation – Advisory System</h2>
+  <div>
+    <h1>Asesor SmartCargo-AIPA</h1>
+    <span>Panel operativo documental · Estándares IATA / Aviación</span>
+  </div>
 </header>
 
 <div class="container">
 
-    <!-- FORM VALIDACIÓN -->
-    <form id="cargoForm">
-        <div class="toolbar">
-            <input type="text" name="cargo_id" placeholder="Cargo ID" required>
-            <button class="primary" type="submit">Validate Cargo</button>
-
-            <select id="roleSelect">
-                <option value="owner">Owner</option>
-                <option value="forwarder">Forwarder / Agent</option>
-                <option value="driver">Driver</option>
-                <option value="warehouse">Warehouse / Admin</option>
-            </select>
-
-            <button type="button" id="translateBtn">ES / EN</button>
-            <button type="button" id="printBtn">Print / PDF</button>
-            <button type="button" id="whatsappBtn">Send WhatsApp</button>
-        </div>
-    </form>
-
-    <!-- DASHBOARD -->
-    <div class="dashboard">
-        <div class="card">
-            <h3>Operational Status</h3>
-            <div class="value green">AUTO</div>
-        </div>
-
-        <div class="card">
-            <h3>Total Weight</h3>
-            <div class="value">— kg</div>
-        </div>
-
-        <div class="card">
-            <h3>Total Volume</h3>
-            <div class="value">— m³</div>
-        </div>
-
-        <div class="card">
-            <h3>Critical Alerts</h3>
-            <div class="value red">0</div>
-        </div>
+  <!-- DASHBOARD -->
+  <section class="dashboard">
+    <div class="card">
+      <h3>Guías Aéreas</h3>
+      <div class="value">128</div>
     </div>
 
-    <!-- TABLA PRINCIPAL -->
-    <table id="cargoTable">
-        <thead>
-            <tr>
-                <th>Cargo ID</th>
-                <th>Weight</th>
-                <th>Volume</th>
-                <th>Semaphore</th>
-                <th>Documents</th>
-                <th>Document Details</th>
-                <th>Date</th>
-                <th>Alerts / Legal</th>
-            </tr>
-        </thead>
-        <tbody>
-            <!-- scripts.js inserta aquí -->
-        </tbody>
-    </table>
+    <div class="card">
+      <h3>Documentos Correctos</h3>
+      <div class="value" style="color:var(--green)">94</div>
+    </div>
 
-    <footer class="legal">
-        SmartCargo-AIPA is an advisory system only. Final cargo acceptance is subject to
-        Avianca Airlines, IATA, CBP, TSA and DOT regulations.
-    </footer>
+    <div class="card">
+      <h3>En Observación</h3>
+      <div class="value" style="color:var(--yellow)">21</div>
+    </div>
+
+    <div class="card">
+      <h3>Críticos</h3>
+      <div class="value" style="color:var(--red)">13</div>
+    </div>
+  </section>
+
+  <!-- SEMÁFORO AVANZADO -->
+  <section class="card" style="margin-bottom:30px;">
+    <h3>Semáforo Documental General</h3>
+    <div class="semaforo">
+      <div class="light green">OK</div>
+      <div class="light yellow">Revisar</div>
+      <div class="light red">Bloqueado</div>
+    </div>
+  </section>
+
+  <!-- TABLA DETALLADA -->
+  <section>
+    <table>
+      <thead>
+        <tr>
+          <th>AWB</th>
+          <th>Documento</th>
+          <th>Estado</th>
+          <th>Observación</th>
+          <th>Norma</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>134-98765432</td>
+          <td>Air Waybill</td>
+          <td><span class="status ok">Aprobado</span></td>
+          <td>Sin inconsistencias</td>
+          <td>IATA TACT</td>
+        </tr>
+        <tr>
+          <td>134-12345678</td>
+          <td>Factura Comercial</td>
+          <td><span class="status warn">Observación</span></td>
+          <td>Valor declarado incompleto</td>
+          <td>Aduana</td>
+        </tr>
+        <tr>
+          <td>134-45678901</td>
+          <td>Lista de Empaque</td>
+          <td><span class="status fail">Crítico</span></td>
+          <td>Falta firma del exportador</td>
+          <td>IATA / ICAO</td>
+        </tr>
+      </tbody>
+    </table>
+  </section>
+
+  <footer>
+    SmartCargo-AIPA · Asesor documental aeronáutico y de carga
+  </footer>
 
 </div>
-
-<script src="/static/scripts.js"></script>
 
 </body>
 </html>
